--- a/Indicator-Service/Kombucha-Indicator-Service/build.gradle
+++ b/Indicator-Service/Kombucha-Indicator-Service/build.gradle
@@ -30,7 +30,9 @@ repositories {
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
     compile("org.springframework.boot:spring-boot-starter-integration")
+    compile('org.jfree:jfreechart:1.0.19')
     testCompile("org.springframework.boot:spring-boot-starter-test")
+    testCompile('junit:junit:4.12')
 }
 
 eclipse {
