--- a/Datasources/Kombucha-Datasources/.settings/gradle/org.springsource.ide.eclipse.gradle.core.prefs
+++ b/Datasources/Kombucha-Datasources/.settings/gradle/org.springsource.ide.eclipse.gradle.core.prefs
@@ -1,4 +1,5 @@
 #org.springsource.ide.eclipse.gradle.core.preferences.GradleProjectPreferences
-#Sun Dec 28 10:57:55 CET 2014
+#Sun Dec 28 11:26:54 CET 2014
 build.family.org.gradle.tooling.model.eclipse.HierarchicalEclipseProject=;
+org.springsource.ide.eclipse.gradle.linkedresources=
 org.springsource.ide.eclipse.gradle.rootprojectloc=
