--- a/Datasources/Kombucha-Datasources/build.gradle
+++ b/Datasources/Kombucha-Datasources/build.gradle
@@ -29,6 +29,7 @@ repositories {
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter")
+    compile('org.apache.httpcomponents:httpclient:4.3.6')
     testCompile("org.springframework.boot:spring-boot-starter-test")
 }
 
