--- a/Datasources/Kombucha-Datasources/build.gradle
+++ b/Datasources/Kombucha-Datasources/build.gradle
@@ -30,6 +30,7 @@ repositories {
 dependencies {
     compile("org.springframework.boot:spring-boot-starter")
     compile('org.apache.httpcomponents:httpclient:4.3.6')
+    compile('commons-io:commons-io:2.4')
     testCompile("org.springframework.boot:spring-boot-starter-test")
 }
 
