--- a/Indicator-Service/Kombucha-Indicator-Service/build.gradle
+++ b/Indicator-Service/Kombucha-Indicator-Service/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
     compile("org.springframework.boot:spring-boot-starter-integration")
     compile('org.jfree:jfreechart:1.0.19')
+    compile 'com.h2database:h2'						//Necessary to test JPA
     testCompile("org.springframework.boot:spring-boot-starter-test")
     testCompile('junit:junit:4.12')
 }
